--- a/index.html
+++ b/index.html
@@ -38,5 +38,11 @@
     </style>
 </head>
 <body>
+    <div class="container mx-auto px-4 py-12 max-w-6xl">
+        <header class="text-center mb-16">
+            <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">E-Commerce Website Features</h1>
+            <p class="text-xl text-gray-600 max-w-3xl mx-auto">Comprehensive checklist for building a professional online store</p>
+        </header>
+    </div>
 </body>
 </html>
