--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
             <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">E-Commerce Website Features</h1>
             <p class="text-xl text-gray-600 max-w-3xl mx-auto">Comprehensive checklist for building a professional online store</p>
         </header>
+        <div class="flex flex-wrap mb-8 border-b border-gray-200">
+            <button onclick="showTab('uiux')" class="tab-btn active-tab px-6 py-3 text-lg">UI/UX</button>
+            <button onclick="showTab('product')" class="tab-btn px-6 py-3 text-lg">Products</button>
+            
+        </div>
+
     </div>
 </body>
 </html>
