--- a/index.html
+++ b/index.html
@@ -46,6 +46,8 @@
         <div class="flex flex-wrap mb-8 border-b border-gray-200">
             <button onclick="showTab('uiux')" class="tab-btn active-tab px-6 py-3 text-lg">UI/UX</button>
             <button onclick="showTab('product')" class="tab-btn px-6 py-3 text-lg">Products</button>
+            <button onclick="showTab('cart')" class="tab-btn px-6 py-3 text-lg">Cart & Checkout</button>
+            <button onclick="showTab('user')" class="tab-btn px-6 py-3 text-lg">User Accounts</button>
             
         </div>
 
