--- a/index.html
+++ b/index.html
@@ -48,7 +48,9 @@
             <button onclick="showTab('product')" class="tab-btn px-6 py-3 text-lg">Products</button>
             <button onclick="showTab('cart')" class="tab-btn px-6 py-3 text-lg">Cart & Checkout</button>
             <button onclick="showTab('user')" class="tab-btn px-6 py-3 text-lg">User Accounts</button>
-            
+            <button onclick="showTab('admin')" class="tab-btn px-6 py-3 text-lg">Admin Panel</button>
+            <button onclick="showTab('security')" class="tab-btn px-6 py-3 text-lg">Security</button>
+           
         </div>
 
     </div>
