--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
             <button onclick="showTab('user')" class="tab-btn px-6 py-3 text-lg">User Accounts</button>
             <button onclick="showTab('admin')" class="tab-btn px-6 py-3 text-lg">Admin Panel</button>
             <button onclick="showTab('security')" class="tab-btn px-6 py-3 text-lg">Security</button>
+            <button onclick="showTab('seo')" class="tab-btn px-6 py-3 text-lg">SEO</button>
+            <button onclick="showTab('social')" class="tab-btn px-6 py-3 text-lg">Social Media</button>
            
         </div>
 
