payment and shipping

--- a/index.html
+++ b/index.html
@@ -52,7 +52,8 @@
             <button onclick="showTab('security')" class="tab-btn px-6 py-3 text-lg">Security</button>
             <button onclick="showTab('seo')" class="tab-btn px-6 py-3 text-lg">SEO</button>
             <button onclick="showTab('social')" class="tab-btn px-6 py-3 text-lg">Social Media</button>
-           
+            <button onclick="showTab('payment')" class="tab-btn px-6 py-3 text-lg">Payments</button>
+            <button onclick="showTab('shipping')" class="tab-btn px-6 py-3 text-lg">Shipping</button>
         </div>
 
     </div>
