--- a/index.html
+++ b/index.html
@@ -55,6 +55,10 @@
             <button onclick="showTab('payment')" class="tab-btn px-6 py-3 text-lg">Payments</button>
             <button onclick="showTab('shipping')" class="tab-btn px-6 py-3 text-lg">Shipping</button>
         </div>
+        <div id="uiux" class="tab-content">
+            <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+            </div>
+        </div>
 
     </div>
 </body>
