--- a/index.html
+++ b/index.html
@@ -57,6 +57,14 @@
         </div>
         <div id="uiux" class="tab-content">
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
+                 <!-- Responsive Design -->
+                <div class="feature-card bg-white rounded-lg shadow-md p-6 transition duration-300">
+                    <div class="text-blue-500 mb-4 text-2xl">
+                        <i class="fas fa-mobile-alt"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Responsive Design</h3>
+                    <p class="text-gray-600">Fully responsive layout that works perfectly on all devices from mobile to desktop, with adaptive images and touch-friendly elements.</p>
+                </div>
             </div>
         </div>
 
