--- a/index.html
+++ b/index.html
@@ -65,6 +65,15 @@
                     <h3 class="text-xl font-semibold mb-2">Responsive Design</h3>
                     <p class="text-gray-600">Fully responsive layout that works perfectly on all devices from mobile to desktop, with adaptive images and touch-friendly elements.</p>
                 </div>
+                
+                <!-- Intuitive Navigation -->
+                <div class="feature-card bg-white rounded-lg shadow-md p-6 transition duration-300">
+                    <div class="text-blue-500 mb-4 text-2xl">
+                        <i class="fas fa-sitemap"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Intuitive Navigation</h3>
+                    <p class="text-gray-600">Clear category structure, mega menus, breadcrumbs, and predictive search to help users find products quickly.</p>
+                </div>
             </div>
         </div>
 
