--- a/index.html
+++ b/index.html
@@ -74,6 +74,15 @@
                     <h3 class="text-xl font-semibold mb-2">Intuitive Navigation</h3>
                     <p class="text-gray-600">Clear category structure, mega menus, breadcrumbs, and predictive search to help users find products quickly.</p>
                 </div>
+
+                <!-- Fast Loading -->
+                <div class="feature-card bg-white rounded-lg shadow-md p-6 transition duration-300">
+                    <div class="text-blue-500 mb-4 text-2xl">
+                        <i class="fas fa-tachometer-alt"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Fast Loading</h3>
+                    <p class="text-gray-600">Optimized performance with lazy loading, minimized assets, and CDN integration for sub-second page loads.</p>
+                </div>
             </div>
         </div>
 
