--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                     <h3 class="text-xl font-semibold mb-2">Fast Loading</h3>
                     <p class="text-gray-600">Optimized performance with lazy loading, minimized assets, and CDN integration for sub-second page loads.</p>
                 </div>
+
+                <!-- Accessibility -->
+                <div class="feature-card bg-white rounded-lg shadow-md p-6 transition duration-300">
+                    <div class="text-blue-500 mb-4 text-2xl">
+                        <i class="fas fa-universal-access"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Accessibility</h3>
+                    <p class="text-gray-600">WCAG compliant with proper contrast ratios, keyboard navigation, ARIA labels, and screen reader support.</p>
+                </div>
             </div>
         </div>
 
