--- a/index.html
+++ b/index.html
@@ -92,6 +92,16 @@
                     <h3 class="text-xl font-semibold mb-2">Accessibility</h3>
                     <p class="text-gray-600">WCAG compliant with proper contrast ratios, keyboard navigation, ARIA labels, and screen reader support.</p>
                 </div>
+
+                <!-- Dark Mode -->
+                <div class="feature-card bg-white rounded-lg shadow-md p-6 transition duration-300">
+                    <div class="text-blue-500 mb-4 text-2xl">
+                        <i class="fas fa-moon"></i>
+                    </div>
+                    <h3 class="text-xl font-semibold mb-2">Dark Mode</h3>
+                    <p class="text-gray-600">Optional dark theme that respects system preferences with appropriate color contrast for readability.</p>
+                </div>
+
             </div>
         </div>
 
